[package]
name = "handler"
version = "0.1.0"
edition = "2021"
authors = ["Nguyen Cong Cuong"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
printpdf = { version = "0.7.0", features = ["font_subsetting", "embedded_images"] }
rusttype = "0.9.3"
image = "0.25.0"
